--- a/part11/v1.md
+++ b/part11/v1.md
@@ -40,6 +40,7 @@ https://juejin.im/post/5c16471f6fb9a049c43d91d4
 14. 了解一致性哈希算法吗? 画图说说redis线程模型和内存模型?
 
 15. 连珠炮之MQ
+
     参考: https://doocs.github.io/advanced-java/#/./docs/high-concurrency/mq-interview
     A. 为什么使用消息队列? 以及消息队列的选型(kafka, ActiveMQ, RabbitMQ, RocketMQ)? 
        参考: https://juejin.im/post/5c0fbaf8f265da616f6fd0c3
@@ -90,11 +91,78 @@ https://juejin.im/post/5c16471f6fb9a049c43d91d4
        request.required.acks=-1(all),代表Leader和ISR都接收才返回ACK。不会丢消息, 但是性能最差。
     
     E. 如何保证消息的顺序性?(其实还在问中间件的设计)
+       参考: https://juejin.im/post/5af7cb61518825673954d1a2 (RocketMQ的解释)
+       简单来说, 保证生产者 – MQServer – 消费者是一对一对一的关系。
+       A. 发送到同一个MQServer很重要, 发送到多个broker就没法保证了。这意味着需要发送到同一个MessageQueue。
+       B. 消费者应该是单线程来消费单个MessageQueue(当然多线程如果能保证消费顺序那也OK)。 
+    
     F. 如何解决消息队列的延时以及过期失效问题? 消息队列满了以后该怎么处理? 有几百万消息持续积压几个小时该怎么解决? (这个问题貌似遇见的比较少)
-    G. 如果自己实现一个消息队列, 该如何进行架构设计? 说一下思路
+       关于消息堆积(这种情况基本上不能从生产者入手):
+           参考: https://www.bcoder.top/2019/11/24/%E6%B6%88%E6%81%AF%E9%98%9F%E5%88%97%E4%B9%8B%E6%B6%88%E6%81%AF%E7%A7%AF%E5%8E%8B/
+           A. 检查是消费端哪里的bug导致的, 看能不能修复
+           B. 消息处理逻辑中是否有降级逻辑
+           C. 消息是否可以忽略(需要有开关可以忽略)
+           D. 最差的办法就是扩容. 记得还要扩容messagequeue(partition)。     
+       MQ写满?
+           问题有点傻屌啊。比如RocketMQ会自动清理一定时间之前的数据的。  
+       消息过期失效?
+           这本质就是消息丢了。只能半夜查询离线表计算对应数据重推MQ       
+    
+    G. 为什么会产生重复消息?
+       Producer发送到Broker, Broker收到发送Ack给Producer, 但是没法送成功(网络原因), 此时Producer可能会重试。这里就会有重复消息的
+       问题。(任何依赖网络的case都可能会不稳定)          
+       
+    H. 如果自己实现一个消息队列, 该如何进行架构设计? 说一下思路
 
 16. 连珠炮之MySQL分库分表
-
+    参考: https://juejin.im/post/5d1eb6dff265da1bc64be1d6
+         https://www.imooc.com/article/273845?block_id=tuijian_wz
+         https://zhuanlan.zhihu.com/p/94185797
+    A. 为什么要分库分表?
+       分表: 单表数据量过大, 单表下的SQL性能差(经验数据是大概百万级别就要考虑分表了), 有一种说法是数据量太大导致B+树的高度变高查询性能变差
+       分库: 单库压力大顶不住了, 分库即在分流
+       
+    B. 用过哪些分库分表中间件?
+       TDDL
+       
+    C. 简单描述下你理解的分库分表中间件?(我额外补充的)
+       这里介绍下TDDL的思想。
+       分为三层(matrix, group, atom):
+       Matrix:
+          SQL路由(大部分是hash函数, 可能会路由到多个group)
+          表名替换
+          SQL优化
+          SQL解释    
+          最终的结果Merge
+       Group(可以理解为一个应用组内的系统级别操作):
+          支持读写分离(业务层不用关心, 最多一个配置项剩下的全交给TDDL帮你切换)
+          主备切换(同样对上层透明)
+          调用容错(比如一次执行失败是报错还是重试还是其他方案)
+       Atom:
+          JDBC规范的实现, 真正的调用层
+          线程数控制
+          SQL数据统计
+    
+    D. TDDL的主键ID生成?(我额外补充的)
+       首先, 分库分表中的"分库"是相对稳定的。大部分情况下不会出现分库不够了的情况。以此做为背景。
+       假设有4个数据库(database), A, B, C, D.
+       每个库中会有一张sequence表, 记录了当前库中涉及到分表的表名称以及最后分配的id。
+       
+       这里有2个关键概念。
+       内步长: 每次批量获取的id数量。假设1000, 外步长: 即1000*4=4000.
+       这样初始化时A, B, C, D的初始id分别从0，1000，2000，3000开始。
+       如果哪个库分配的ID用完了需要加上外步长再申请, 比如C用完了新申请的id是2000+4000=6000, 即6000-7000这个范围。 
+       
+    C. 不同的分库分表中间件都有什么优点和缺点?
+       优点就是上面说的。
+       缺点?
+          TDDL只能支持Java。
+          其他的真的没印象了。
+       
+    D. 你们是如何对数据库进行垂直拆分或者水平拆分的?
+       水平分表: 即常说的分库分表中的分表。即单表数据量过大拆分为多表.
+       垂直分表: 数据库中不同业务单元的数据 划分到不同的数据库。  比如交易数据就去交易库。用户数据就去用户库, 不要揉在一起。
+         
 17. 连珠炮之高可用
 
 18. 连珠炮之多线程
